edited homepage HTML

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,2 @@
-<h1>Hello, Rails!</h1>
+<h1>Hello</h1>
+<p>My name is Kayla Morrison, I'm a Codefellows student who enjoys bunnies, terrible 90s TV dramas, and cupcakes</p>
