--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  *
  *= require_self
  *= require foundation_and_overrides
+ *= require foundation-icons.css
+ *= require foundation.min.css
+ *= require normalize.css
 
  *= require_tree .
  */
