--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,59 +7,9 @@
     </body>
 </html> -->
 
-<!doctype html>
+
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <!--[if IE 10]><html class="ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en">
-
-<head>
-
-    <meta charset="UTF-8">
-
-    <title>Monoma</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Normalize CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <!-- Foundation core CSS -->
-    <link rel="stylesheet" href="css/foundation.css">
-
-    <!-- Foundation font icons core CSS -->
-    <link rel="stylesheet" href="css/foundation-icons.css">
-
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/app.css">
-
-    <!-- Google Web Fonts CSS -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Raleway:400,700|Rock+Salt">
-
-    <!-- Favicons -->
-    <link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
-    <!-- For third-generation iPad with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon/apple-touch-icon-144x144-precomposed.png">
-    <!-- For iPhone with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/favicon/apple-touch-icon-114x114-precomposed.png">
-    <!-- For first- and second-generation iPad: -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/favicon/apple-touch-icon-72x72-precomposed.png">
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <link rel="apple-touch-icon-precomposed" href="img/favicon/apple-touch-icon-precomposed.png">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Modernizr Scripts -->
-    <script src="js/modernizr.js"></script>
-
-</head>
-
-<body>
 
         <!-- masthead -->
         <header class="masthead this_is_home">
@@ -71,7 +21,7 @@
                             <li class="name">
                                 <h1>
                                     <a class="logo" href="./index.html">
-                                        <img src="img/logo.png" alt="">
+                                        <img src="/assets/logo.png" alt="">
                                     </a>
                                 </h1>
                             </li>
@@ -212,35 +162,35 @@
                       <li data-orbit-slide="cards">
                         <div>
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/cards_1.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/cards_1.jpg" alt="Recent Work"></div>
                                 <h4>Card One</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/cards_1.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/cards_1.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/cards_2.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/cards_2.jpg" alt="Recent Work"></div>
                                 <h4>Card Two</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/cards_2.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/cards_2.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/cards_3.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/img/demo/cards_3.jpg" alt="Recent Work"></div>
                                 <h4>Card Three</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/cards_3.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/cards_3.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/cards_4.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/cards_4.jpg" alt="Recent Work"></div>
                                 <h4>Card Four</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo ."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/cards_4.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/cards_4.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
                         </div>
                       </li>
@@ -249,35 +199,35 @@
                       <li data-orbit-slide="mockups">
                         <div>
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/mockup_1.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/mockup_1.jpg" alt="Recent Work"></div>
                                 <h4>Mockups One</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/mockup_1.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/mockup_1.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/mockup_2.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/mockup_2.jpg" alt="Recent Work"></div>
                                 <h4>Mockups Two</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/mockup_2.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/mockup_2.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/mockup_3.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/mockup_3.jpg" alt="Recent Work"></div>
                                 <h4>Mockups Three</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/mockup_3.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/mockup_3.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/mockup_4.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/mockup_4.jpg" alt="Recent Work"></div>
                                 <h4>Mockups Four</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo ."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/mockup_4.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/mockup_4.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
                         </div>
                       </li>
@@ -286,35 +236,35 @@
                       <li data-orbit-slide="design">
                         <div>
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/design_1.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/design_1.jpg" alt="Recent Work"></div>
                                 <h4>Design One</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/design_1.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/design_1.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/design_2.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/design_2.jpg" alt="Recent Work"></div>
                                 <h4>Design Two</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/design_2.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/design_2.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/design_3.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/design_3.jpg" alt="Recent Work"></div>
                                 <h4>Design Three</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/design_3.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/design_3.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
 
 
 
                             <div class="tumb">
-                                <div class="slidertp"> <img src="img/demo/design_4.jpg" alt="Recent Work"></div>
+                                <div class="slidertp"> <img src="/assets/design_4.jpg" alt="Recent Work"></div>
                                 <h4>Design Four</h4>
                                 <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo ."<a href="portfolio_item.html">More..</a></p>
-                                <div class="sliderbt"> <img src="img/demo/design_4.jpg" alt="Recent Work"></div>
+                                <div class="sliderbt"> <img src="/assets/design_4.jpg" alt="Recent Work"></div>
                             </div><!-- /tumb -->
                         </div>
                   </li>
@@ -373,7 +323,6 @@
         <script src="js/foundation.min.js"></script>
         <script src="js/main.js"></script>
 
-    </body>
-</html>
+
 
 
