move javascripts out of folder

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
                             <li class="name">
                                 <h1>
                                     <a class="logo" href="./index.html">
-                                        <img src="/assets/logo.png" alt="">
+                                        <!-- <img src="/assets/logo.png" alt=""> -->
                                     </a>
                                 </h1>
                             </li>
@@ -37,10 +37,10 @@
                             <ul class="right">
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li><i class="icon_divider  fi-asterisk size-12"></i></li>
-                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="about.html">About</a></li>
                                 <li><i class="icon_divider  fi-asterisk size-12"></i></li>
-                                <li><a href="services.html">Services</a></li>
-                                <li><i class="icon_divider  fi-asterisk size-12"></i></li>
+                                <!-- <li><a href="services.html">Services</a></li>
+                                <li><i class="icon_divider  fi-asterisk size-12"></i></li> -->
                                 <li><a href="portfolio.html">Portfolio</a></li>
                                 <li><i class="icon_divider  fi-asterisk size-12"></i></li>
                                 <li><a href="contact.html">Contact</a></li>
@@ -54,8 +54,8 @@
 
             <!-- Info -->
             <section class="info">
-                <h1 class="info_text">MINIMAL</h1>
-                <h2 class="info_text">DESIGN</h2>
+                <h1 class="info_text">KAYLA</h1>
+                <h2 class="info_text">MORRISON</h2>
             </section><!-- / .Info -->
 
 
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="medium-10 small-centered columns">
 
-                            <h2>Minimal Design,clean and fast template.</h2>
+                            <h2>Seattle-based Web Developer</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, voluptatibus, consectetur, consequatur quod dolorum numquam impedit ut earum provident magnam magni atque possimus reprehenderit tempora in eum ullam delectus quisquam?</p>
 
                 </div><!-- /.medium-10 .small-centered .columns -->
@@ -310,7 +310,7 @@
             <div class="toTop"><i class="fi-arrow-up size-32"></i></div>
             <div class="row">
                 <div class="large-12 columns">
-                    2013 &copy; Monoma.
+                    2013 &copy; Kayla Morrison.
                 </div><!-- /.large-12 columns -->
             </div><!-- /.row -->
         </section>
