clean up andchange about

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,3 @@
-
-
-<!-- </head>
-<body>
-    <h1>Hello</h1>
-        <p>My name is Kayla Morrison, I'm a Codefellows student who enjoys bunnies, terrible 90s TV dramas, and cupcakes</p>
-    </body>
-</html> -->
-
-
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <!--[if IE 10]><html class="ie10" lang="en" > <![endif]-->
 
@@ -64,7 +54,7 @@
             <section class="share_icons">
                 <ul>
                     <li><a href="#"><i class="fi-social-facebook size-36"></i></a></li>
-                    <li><a href="#"><i class="fi-social-twitter size-36"></i></a></li>
+                    <li><a href="https://twitter.com/kaylamorrison"><i class="fi-social-twitter size-36"></i></a></li>
                     <li><a href="#"><i class="fi-social-youtube size-36"></i></a></li>
                     <li><a href="#"><i class="fi-social-instagram size-36"></i></a></li>
                 </ul>
@@ -80,8 +70,8 @@
             <div class="row">
                 <div class="medium-10 small-centered columns">
 
-                            <h2>Seattle-based Web Developer</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, voluptatibus, consectetur, consequatur quod dolorum numquam impedit ut earum provident magnam magni atque possimus reprehenderit tempora in eum ullam delectus quisquam?</p>
+                            <h2>Hello! My name is Kayla</h2>
+                            <p>I am a Seattle-based web developer currently attending Code Fellows</p>
 
                 </div><!-- /.medium-10 .small-centered .columns -->
             </div><!-- /.row -->
