--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1,3 +1,4 @@
+
 /* Table of Content
 ==================================================
 	#Global Styles
@@ -265,7 +266,7 @@ input[type="url"]:focus, textarea:focus {
 .top-bar-section li a:not(.button),
 .top-bar-section li a:not(.button):hover ,
 .top-bar.expanded .title-area{
-	background: rgb(0,0,0,0);
+	background: rgb(0,0,0);
 	background: rgba(255, 255, 255, 0);
 	text-transform: uppercase;
 	font-weight: 900;
@@ -471,17 +472,17 @@ blockquote:hover {
 	height: 3em;
 	line-height: 2.7em;
 	text-align: center;
-	-webkit-transition:background 0..8s ease,color 0.5s linear;
-	-moz-transition:background 0..8s ease,color 0.5s linear;
-	transition:background 0..8s ease,color 0.5s linear;
+	-webkit-transition:background 0..8s ease,color 0.5s linear{}
+	-moz-transition:background 0..8s ease,color 0.5s linear{}
+	transition:background 0..8s ease,color 0.5s linear{}
 }
 .share_icons ul li a:hover {
 	border-color: #FFFFFF;
 	background: rgb(224, 224, 224);
 	background: rgba(224, 224, 224, 0.25);
-	-webkit-transition:background 0..8s ease,color 0.5s linear;
-	-moz-transition:background 0..8s ease,color 0.5s linear;
-	transition:background 0..8s ease,color 0.5s linear;
+	-webkit-transition:background 0..8s ease,color 0.5s linear{}
+	-moz-transition:background 0..8s ease,color 0.5s linear{}
+	transition:background 0..8s ease,color 0.5s linear{}
 }
 /* Share icons colors */
 .fi-social-facebook {
