--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,10 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require foundation
  *= require foundation_and_overrides
- *= require foundation-icons.css
- *= require foundation.min.css
- *= require normalize.css
-
  *= require_tree .
  */
+  @import "foundation_and_overrides";
