--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
+    <% flash.each do |key, value| %>
+      <div class= "alert-box round<%= flash_class(key)%>">
+        <%=value %>
+      </div>
+    <% end %>
   </head>
 
   <body>
