--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -33,7 +33,7 @@
       <img src="http://placehold.it/400x300&text=[img]">
     </div>
     <div class="large-8 columns">
-      <h4>This is a content section.</h4>
+      <h4>Kayla Morrison</h4>
       <div class="row">
         <div class="large-6 columns">
           <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
