add sign out, sign in with existing user and authors to posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,10 @@
   <strong>Title:</strong>
   <%= @post.title %>
 </p>
+<p id="author">
+  <b>By:</b>
+  <%= @post.author.email %>
+</p>
 
 <p>
   <strong>Body:</strong>
