--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
+    <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
 
 
@@ -22,9 +23,14 @@
   </head>
 
   <body>
+    <% if current_user.present? %>
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+    <% else %>
     <%= link_to "Sign Up", new_user_registration_path %>
+    <%= link_to "Sign in", user_session_path %>
+    <% end %>
 
-      <%= yield %>
+  <%= yield %>
 
   </body>
 </html>
