--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,4 +22,22 @@
   <div class="actions">
     <%= f.submit %>
   </div>
-<% end %>
+
+<% if current_user.role == "editor" %>
+    <div class="row collapse">
+      <div class="small-3 columns">
+        <%= f.label :published, class: "right inline", title: "Is this post published?", data: {tooltip: true } %><br>
+      </div>
+
+      <div class="small-9 columns">
+        <%= f.check_box :published %>
+      </div>
+    </div>
+  <% end %>
+
+
+<!--    <div class="field">
+      <%= f.label :published %>
+      <%= f.check_box :published %>
+    </div>
+<% end %> -->
