--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,7 @@
   <b>Status:</b>
   <%= @post.published? ? "Published" : "Unpublished" %>
 </p>
-
+<%= render 'comments/form' %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %> |
+
