--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,10 @@
   <%= @post.published? ? "Published" : "Unpublished" %>
 </p>
 <%= render 'comments/form' %>
+
+<!--Display Comments-->
+<%= render 'comments/index' %>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %> |
 
