--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,17 +23,16 @@
     <%= f.submit %>
   </div>
 
-<% if current_user.role == "editor" %>
+  <% if current_user.role == "editor" %>
     <div class="row collapse">
       <div class="small-3 columns">
-        <%= f.label :published, class: "right inline", title: "Is this post published?", data: {tooltip: true } %><br>
+        <%= f.label :published, class: "right inline", title: "Is this post published?", data: {tooltip: true } %>
+        <br>
       </div>
-
+      </div
+    <% end %>
       <div class="small-9 columns">
         <%= f.check_box :published %>
       </div>
     </div>
-  <% end %>
-
-
-
+<% end %>
