--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,11 @@
   <b>Status:</b>
   <%= @post.published? ? "Published" : "Unpublished" %>
 </p>
+
+<!--Publish button visible for editor-->
+
+
+  <!--add new comments-->
 <%= render 'comments/form' %>
 
 <!--Display Comments-->
