--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,8 +18,11 @@
         <td><%= post.title %></td>
         <td><%= post.body %></td>
         <td><%= link_to 'Show', post %></td>
+
+        <% if policy(@posts).update? %>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post_path(post),  method: :delete, data: { confirm: 'Are you sure?'} %></td>
+        <% end %>
 
       </tr>
     <% end %>
@@ -27,6 +30,9 @@
 </table>
 
 <br>
-<% if current_user.author? || current_user.editor? %>
+
+<!--need to make this link conditional to only editor/author-->
+<% if policy(@posts).create? %>
   <%= link_to 'New Post', new_post_path %>
 <% end %>
+
