--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,6 +29,8 @@
 <!--Display Comments-->
 <%= render 'comments/index' %>
 
+<% unless current_user.user? %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
+<% end %>
 <%= link_to 'Back', posts_path %> |
 
