--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,25 +6,24 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
     <td>
   </thead>
+
   <tbody>
     <% @posts.each do |post| %>
-      <tr>
+      <tr id="<%= dom_id(post) %>">
         <td><%= post.title %></td>
         <td><%= post.body %></td>
         <td><%= link_to 'Show', post %></td>
 
         <% if policy(@posts).update? %>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post_path(post),  method: :delete, data: { confirm: 'Are you sure?'} %></td>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <% end %>
-
-      </tr>
+        <% if policy(@posts).destroy? %>
+          <td><%= link_to 'Destroy', post_path(post),  method: :delete, data: { confirm: 'Are you sure?'} %></td>
+        <% end %>
+        </tr>
     <% end %>
   </tbody>
 </table>
