--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -33,6 +33,11 @@
 <br>
 
 <% if policy(@posts).create? %>
-  <%= link_to 'New Post', new_post_path %>
+  <%= link_to 'New Post', new_post_path, id: "new_link", remote: true %>
 <% end %>
+
+<h2>Posts</h2>
+<div class="posts" id="all_posts">
+
+</div>
 
