--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,3 +1,3 @@
 $('#new_post').remove();
 $('#new_link').show();
-$('#all_posts').append('<%= j render(@post) %>');
+$('#posts').append('<%= j render("post_new_index") %>');
