--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -30,10 +30,10 @@
 
 
 <!--add new comments-->
-<%#= render 'comments/form' %>
+<%= render 'comments/form' %>
 
 <!--Display Comments-->
-<%#= render 'comments/index' %>
+<%= render 'comments/index' %>
 
 
 
