--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,32 +1,13 @@
-<%= form_for @post, remote: true do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-      <% @post.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= simple_form_for @post, remote: true do |f| %>
+  <%= f.error_notification %>
+  <%= f.error :base %>
+  <%= f.input :title %>
+  <%= f.input :body %>
+  <%= f.button :submit %>
 
 <!--Publish box-->
   <% if current_user.editor? %>
-    <%= f.label :published %>
-    <%= f.check_box :published %>
+    <%= f.input :published %>
   <% end %>
 <% end %>
 
