--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,24 +1,7 @@
-<%= form_for(@project) do |f| %>
-<% if @project.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
-  <ul>
-    <% @project.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :technologies_used %><br />
-    <%= f.text_area :technologies_used %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= simple_form_for(@project) do |f| %>
+  <%= f.error_notification %>
+  <%= f.input :name, label: "Title" %>
+  <%= f.input :technologies_used, hint: "HTML, Rails, etc" %>
+  <%= f.error :base %>
+  <%= f.button :submit %>
 <% end %>
