--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,10 +1,11 @@
-<h2>Posts</h2>
+<h2><%= t "posts.title" %></h2>
 
 <table id="posts">
   <thead>
     <tr>
       <th>Title</th>
       <th>Body</th>
+      <th>Created At</th>
     </tr>
     <td>
   </thead>
@@ -14,6 +15,7 @@
       <tr id="<%= dom_id(post) %>">
         <td><%= post.title %></td>
         <td><%= post.body %></td>
+        <td><span class="timestamp">at <%=I18n.l post.created_at%></span></td>
         <td><%= link_to 'Show', post %></td>
 
         <% if policy(@posts).update? %>
