--- a/app/views/comments/_approve.html.erb
+++ b/app/views/comments/_approve.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [ @post, comment] do |f| %>
+<%= form_for [ @commentable, comment] do |f| %>
   <%= f.hidden_field :approved, value: true %>
   <%= f.submit "Approved" %>
 <% end %>
