add image uploading to projects

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,6 +19,8 @@
     <%= f.text_area :technologies_used %>
   </div>
   <div class="actions">
+
+    <%= f.file_field :image%>
     <%= f.submit %>
   </div>
 <% end %>
