--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -10,6 +10,10 @@
 </div>
 <% end %>
 
+<%= f.hidden_field :key %>
+
+  <p>File: <%= @project.image_name %>
+
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -19,8 +23,6 @@
     <%= f.text_area :technologies_used %>
   </div>
   <div class="actions">
-
-    <%= f.file_field :image%>
     <%= f.submit %>
   </div>
 <% end %>
