--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,6 +13,11 @@
   </div>
 <% end %>
 
-<br />
+<%= direct_upload_form_for @uploader do |f| %>
+  <p><%= f.file_field :image %></p>
+  <p><%= f.submit "Upload Image" %></p>
+<% end %>
+
+<br>
 <%= link_to 'New project', new_project_path %>
 
